css/style.css
/* 01. Basic Styles
 *  * =================================================================== */

 html {
    overflow-x: hidden;
    height: 100%;
    width: 100%;
 }
 body {
    font-family: 'Source Sans Pro', sans-serif;
    background:  black;
 }

 h1 {
    font-weight: bold;
 }

 h2 {
 }

 h5 {
    font-weight: 600;
 }

 a {
    cursor: pointer;
    color: #9bddff;
    text-decoration: none;
 }

 a:hover {
    text-decoration:none;
    color: #9bddff;
    opacity: 0.9;
 }

 hr {
    border-top: 5px solid #9bddff;
    width: 80px;
    padding-bottom: 20px;
 }

 .colour-splash {
    color: #9bddff;
 }


/* 02. Intro
 *  * =================================================================== */

 .section-intro {
    background: black no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    width: 100%;
    height: 50vh;
    margin-top: 0;
    margin-bottom: 0;
    position: relative;
    text-align: center;
    color: white;
    display: table;
}

.section-intro h1 {
    margin-top: 0;
    margin-bottom: 0;
}



 .section-contact {
    background: black no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    width: 100%;
    height: auto;
    margin-top: 2vh;
    margin-bottom: 2vh;
    position: relative;
    text-align: center;
    color: white;
    display: table;
}

.section-contact h1 {
    margin-top: 0;
    margin-bottom: 0;
}


 .section-about {
    background: black no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    width: 100%;
    height: auto;
    margin-top: 2vh;
    margin-bottom: 2vh;
    position: relative;
    text-align: center;
    color: white;
    display: table;
}

.section-about h1 {
    margin-top: 0;
    margin-bottom: 0;
}

 .outro {
    background: black no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    width: 100%;
    height: 10px;
    position: relative;
    text-align: center;
    color: white;
    display:table;
 }

.topnav {
  background-color: black;
  overflow: hidden;
  float:right;
}

/* Style the links inside the navigation bar */
.topnav a {
  float: left;
  color: #f2f2f2;
  text-align: center;
  padding: 30px 30px 30px 30px;
  text-decoration: none;
  font-size: 14px;
}

/* Change the color of links on hover */
.topnav a:hover {
  background-color: #ddd;
  color: black;
}



::-webkit-input-placeholder {
   color: #9bddff;
}

:-moz-placeholder { /* Firefox 18- */
   color: #9bddff;  
}

::-moz-placeholder {  /* Firefox 19+ */
   color: #9bddff;  
}

:-ms-input-placeholder {  
   color: #9bddff;  
}

form {
  padding: 5px;
  background: black;
  display: grid;
  color: white;
  text-align: left;
}

form input {
  border: none;
  background: transparent;
  border-bottom: 1px solid #9bddff;
  outline: none;
  font-size: 18px;
  text-align: left;
}

form button {
  background: black;
  border: 14;
  border-color: #9bddff;
  color: white;

}


/* Rows
--------------------------------------------------------------------------------------------------------------- */
.row0, .row0 a{}
.row1{padding:80px 0 0 0;}
.row2, .row2 a{}
.row3, .row3 a{}
.row4, .row4 a{}
.row5, .row5 a{}

/* Max Wrapper Width - Laptop, Desktop etc.
--------------------------------------------------------------------------------------------------------------- */
@media screen and (min-width:1140px){
    .hoc{max-width:1140px;}
}

@media screen and (min-width:978px) and (max-width:1140px){
    .hoc{max-width:95%;}
}

.wrapper{display:block; background-color:black; position:relative; width:100%; margin:0; padding:0; text-align:left; word-wrap:break-word;}


.hoc{display:block; margin:0 auto;}


.clear, .group{display:block;}
.clear::before, .clear::after, .group::before, .group::after{display:table; content:"";}
.clear, .clear::after, .group, .group::after{clear:both;}

a{outline:none; text-decoration:none;}

.fl_left, .imgl{float:left;}
.fl_right, .imgr{float:right;}

img{width:auto; max-width:100%; height:auto; margin:0; padding:0; border:none; line-height:normal; vertical-align:middle;}
#about { width:auto; height:auto; margin-left: 14px; margin-right: 14px}
.imgl{margin:0 15px 10px 0; clear:left;}
.imgr{margin:0 0 10px 15px; clear:right;}
.imgover{display:inline-block; position:relative; max-width:100%;}
.imgover::before, .imgover::after{display:block; position:absolute; content:""; text-align:center; opacity:0;}
.imgover::before{top:0; right:0; bottom:0; left:0;}
.imgover::after{top:50%; left:50%; width:50px; height:50px; line-height:50px; margin:-25px 0 0 -25px; font-family:"Font Awesome\ 5 Free"; font-weight:900; content:"\f067";/* fa-plus */ font-size:28px;}
.imgover:hover::before, .imgover:hover::after{opacity:1;}


.intro {
    background:  black;
    vertical-align: middle;
    text-align: left;
    display:table-cell;
}

.intro .row {
    margin-right: 0;
    margin-left:0;
}

.intro h1 {
    font-size: 84px;
}

.intro h2 {
    font-size: 50px;
}

.intro h5 {
    color: #9bddff;
    font-size: 2.3rem;
    margin-bottom: 0;
    text-transform: uppercase;
    letter-spacing: .3rem;
    text-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
}


.about {
    float:center;
    display:inline-block;
    background:  black;
    vertical-align: text-top;
    position:relative;
    width:40%; 
    margin-left:14px; 
    margin-right:14px;
    text-align:center; 
    word-wrap:break-word;
}



.about .row {
    margin-right: 0;
    margin-left: 0;
}


.about p {
    font-size: 20px;
    color: white;
    text-align: left;
}


.about h2 {
    font-size: 40px;
    color: white;
}


.about h5 {
    font-size: 2rem;
    margin-bottom: 0;
    text-transform: uppercase;
    letter-spacing: .3rem;
    text-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
}




.contact {
    float:center;
    display:inline-block;
    background:  black;
    vertical-align: text-top;
    position:relative;
    width:40%; 
    margin-left:14px; 
    margin-right:14px;
    text-align:left; 
    word-wrap:break-word;
}


.contact .row {
    margin-right: 0;
    margin-left: 0;
}


.contact h2 {
    font-size: 40px;
    color: #9bddff;
}

.contact h5 {
    font-size: 2rem;
    margin-bottom: 0;
    text-transform: uppercase;
    letter-spacing: .3rem;
    text-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
}


.dark {
    background: #000;
}


/* 03. Social Icons
 *  * =================================================================== */

.social {
  margin: 0 10px;
  padding-top: 1.3em;
  padding-bottom: 3em;
  text-align: center;
  color: black;
  font-size: 0.9em;
}

.social a {
  color: white;
  text-decoration:none;
  padding: 2em;
}

.social a:hover{
  opacity: 0.6;
}

.social-footer {
    position: block;
    padding: 15px;
}

.social-footer a {
    color: white;
    text-decoration: none;
    padding: 0.6em;
    font-size: 1.7em;
}





/* 04. Icon Font
 *  * =================================================================== */

 .lnr {
    font-size: 4em !important;
    color:#fff;
 }

/* 05. Section Styles
 *  * =================================================================== */

section {
    padding-bottom: 1px;
}

.profilepic {
    height: 300px;
    width: auto;
    border-radius: 500px;
}

.section-primary p {
    text-align: left;
    color: #D3D3D3;
}

.section-primary {
    border: #9bddff;
}

.section-colour {
    background-color: #000;
    color: #000;
}

.section-colour p {
    text-align: left;
    color: #D3D3D3;
}

.section-heading .lead {
    text-align: left;
}

.section-heading h2 {
    text-align: center;
}

.section-heading h3 {
    text-align: left;
}

.section-heading h4 {
    text-align: center;
    color: #D3D3D3
}

.section-heading p, li {
    text-align: left;
    color: #D3D3D3;
} 

.section-colour {
    border: #fff;
}

.section-colour hr {
    border-top: 5px solid #fff;
 }


.grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
}

.img-wrapper {
  position: relative;
  overflow: hidden;
}

.img-wrapper > img {
  display: block;
  width: 100%;
  aspect-ratio: 1 / 1;
  object-fit: cover;
  object-position: center;
}

.img-wrapper > .content {
  position: absolute;
  inset: 0;
  font-size: 2rem;
  padding: 1rem;
  background: rgba(255, 255, 255, .4);
  display: flex;
  justify-content: center;
  align-items: center;
}

.img-wrapper > img,
.img-wrapper > .content {
  transition: 200ms ease-in-out;
}

.img-wrapper:hover > img.blur {
  filter: blur(5px);
}

.img-wrapper:hover > img.gray {
  filter: grayscale(1);
}

.img-wrapper:hover > img.zoom {
  transform: scale(1.1);
}

.img-wrapper > .content.fade {
  opacity: 0;
}
.img-wrapper:hover > .content.fade {
  opacity: 1;
}

.img-wrapper > .content.slide-left {
  transform: translateX(-100%);
}
.img-wrapper:hover > .content.slide-left {
  transform: translateX(0);
}

.img-wrapper > .content.slide-right {
  transform: translateX(100%);
}
.img-wrapper:hover > .content.slide-right {
  transform: translateX(0);
}

.img-wrapper > .content.slide-down {
  transform: translateY(-100%);
}
.img-wrapper:hover > .content.slide-down {
  transform: translateY(0);
}

.img-wrapper > .content.slide-up {
  transform: translateY(100%);
}
.img-wrapper:hover > .content.slide-up {
  transform: translateY(0);
}


/* 05. Footer
 *  * =================================================================== */

footer {
    display: block;
    position: static;
    bottom: 0;
    background-color: black;
    color: #fff;
    padding: 50px 0;

}

footer p {
    padding: 15px;
    opacity: 0.8;
}

